--- a/application/admin/view/system/superior.html
+++ b/application/admin/view/system/superior.html
@@ -5,22 +5,22 @@
     </fieldset>
     <form class="layui-form layui-form-pane" lay-filter="form-superior">
         <div class="layui-form-item">
-            <label class="layui-form-label">平台总抽成</label>
+            <label class="layui-form-label" style="width:130px;">平台总抽成(%)</label>
             <div class="layui-input-4">
-                <input type="text" lay-verify="required" name="second" placeholder="返佣默认为百分比" value="{$second}" class="layui-input" maxlength="5">
+                <input type="text" lay-verify="required" name="ratio" placeholder="返佣默认为百分比" value="{$ratio}" class="layui-input" maxlength="5">
                 <p style="color: #666">平台总抽成,各级返佣以此为基础进行计算发放</p>
-                <p style="color: #666">抽成形式：(1)固定金额 (2)(默认)根据任务金额按比例抽取</p>
+                <p style="color: #666">抽成形式：根据任务金额按比例抽取</p>
             </div>
         </div>
         <div class="layui-form-item">
-            <label class="layui-form-label">一级返佣(%)</label>
+            <label class="layui-form-label" style="width:130px;">一级返佣(%)</label>
             <div class="layui-input-4">
                 <input type="text" lay-verify="required" name="first" placeholder="返佣默认为百分比" value="{$first}" class="layui-input" maxlength="5">
                 <p style="color: #666">一级返佣为当A-B-C三级关系时,C完成任务后平台返佣给B的金额</p>
             </div>
         </div>
         <div class="layui-form-item">
-            <label class="layui-form-label">二级返佣(%)</label>
+            <label class="layui-form-label" style="width:130px;">二级返佣(%)</label>
             <div class="layui-input-4">
                 <input type="text" lay-verify="required" name="second" placeholder="返佣默认为百分比" value="{$second}" class="layui-input" maxlength="5">
                 <p style="color: #666">二级返佣为当A-B-C三级关系时，C完成任务后平台返佣给A的金额</p>
